Finish commit HW_4

--- a/FE_9_4_homework_css-layouts/homework/index.html
+++ b/FE_9_4_homework_css-layouts/homework/index.html
@@ -11,7 +11,6 @@
 <body>
     <div class="wrapper">
 		<header>
-		
 			<div class="top-head">
 		    <div class="logo-smoll">Black &nbsp;&&nbsp; White</div>
 				<nav>
@@ -100,8 +99,8 @@
             </div>
             <div class="text2">
                 <h4>Latest Tweet</h4>
-                <p><i>“...aerat vluptatem. Ut eni et illi dolore magnam aliqua et aerat voluptatem.
-                    Utils eni tils et al is minima veniam”</i></p>
+                <p><i>...aerat vluptatem. Ut eni et illi dolore magnam aliqua et aerat voluptatem.
+                    Utils eni tils et al is minima veniam</i></p>
                 <div class="time">3 hours ago</div>
             </div>			
             <div class="text3">
@@ -115,13 +114,13 @@
                 <h4>Newsletter</h4>
                 <p>Neue porro quisquam eist, im ipsum quia dolor sit amettur, adipisci velit,</p>
                 <form>
-                    <input type="email" name="email" placeholder="Enter your E-mail address">
+                    <input type="email" name="email" placeholder="Enter your e-mail address">
 					<input type="submit" value="Subscribe" name="submit">
                 </form>
             </div>
         </div>
         <div class="footer-bottom">
-            <div>@ 2015 Ruben Stom.</div>
+            <div>&#169; 2015 Ruben Stom.</div>
             <nav>
                 <a href="">Home</a>
                 <a href="">About</a>
